# RugGuard

./: .gitignore  README.md  enrich_datasets.py  fetch_onchain_data.py  fetched_tokens.json  generate_datasets.py  inference.py
rugguard_env/: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
rugguard_env/data/: contracts.json  liquidity.json  transactions.json
rugguard_env/server/: Dockerfile  __init__.py  app.py  rugguard_environment.py
rugguard_env/tests/: test_environment.py
